Added basic login/logout functionality

--- a/project/client.css
+++ b/project/client.css
@@ -1,1 +1,119 @@
+body{
+  padding: 0;
+  margin: 0;
+  background-color: steelblue;
 
+}
+
+#welcome {
+    position: relative;
+    width: 600px;
+    height: 400px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 100px;
+}
+
+#welcome input {
+    margin: 0;
+    padding: 0;
+    width: 150px;
+    height: 15px;
+    float: right;
+}
+
+#welcome label {
+    display: inline-block;
+    margin: 0 0 5px 1px;
+    padding: 0;
+    width: 90px;
+    text-align: left;
+
+}
+
+.logo {
+    margin: 0;
+    padding: 0;
+    width: 340px;
+    height: 400px;
+    border: black 1px solid;
+
+}
+
+.login{
+  position: absolute;
+  left: 350px;
+  top: 0;
+  background-color: white;
+  width: 250px;
+  height: 90px;
+  padding: 0;
+  margin: 0;
+  border: black 1px solid;
+}
+
+.login form {
+    margin: 15px 2px 0 0;
+    float: right;
+}
+
+#loginbutton {
+    display: block;
+    padding: 0;
+    margin: 5px;
+    width: 50px;
+    float: right;
+}
+
+#loginfail {
+  font-size: 12px;
+  color: red;
+  margin-left: 35px;
+}
+
+.signup{
+  position: absolute;
+  left: 350px;
+  top: 100px;
+  background-color: white;
+  width: 250px;
+  height: 300px;
+  padding: 0;
+  margin: 0;
+  border: black 1px solid;
+}
+
+#signupbutton {
+    display: block;
+    padding: 0;
+    margin: 5px;
+    width: 50px;
+    float: right;
+}
+
+.signup h2{
+  text-align: center;
+}
+
+.gender {
+    margin: 0;
+    padding: 0;
+    width: 154px;
+    height: 20px;
+    float: right;
+}
+
+.signup form {
+    float: right;
+    margin: 0 2px 0 0;
+    padding: 0;
+}
+
+.signup-button {
+    display: block;
+    padding: 0;
+    margin: 5px;
+    width: 60px;
+    height: 20px;
+    float: right;
+}
